llama-3.1-8b/3_vpc_sub_rt/4/internet-gateway.tf
resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "main-igw"
  }
}
